chore() rename from metadata to identifiers