@@ -2,8 +2,8 @@ package eu.efti.eftigate.service;
 
 import com.ingroupe.common.test.log.MemoryAppender;
 import eu.efti.commons.dto.ControlDto;
-import eu.efti.commons.dto.MetadataResultDto;
-import eu.efti.commons.dto.MetadataResultsDto;
+import eu.efti.commons.dto.IdentifiersResultDto;
+import eu.efti.commons.dto.IdentifiersResultsDto;
 import eu.efti.commons.dto.RequestDto;
 import eu.efti.commons.dto.SearchParameter;
 import eu.efti.commons.dto.UilDto;
@@ -15,11 +15,11 @@ import eu.efti.commons.enums.TransportMode;
 import eu.efti.edeliveryapconnector.service.RequestUpdaterService;
 import eu.efti.eftigate.config.GateProperties;
 import eu.efti.eftigate.entity.ControlEntity;
-import eu.efti.eftigate.entity.MetadataResult;
-import eu.efti.eftigate.entity.MetadataResults;
+import eu.efti.eftigate.entity.IdentifiersResult;
+import eu.efti.eftigate.entity.IdentifiersResults;
 import eu.efti.eftigate.entity.RequestEntity;
 import eu.efti.eftigate.service.gate.EftiGateUrlResolver;
-import eu.efti.metadataregistry.entity.TransportVehicle;
+import eu.efti.identifiersregistry.entity.TransportVehicle;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -52,10 +52,10 @@ public abstract class BaseServiceTest extends AbstractServiceTest {
     protected final ControlEntity controlEntity = new ControlEntity();
 
     protected final RequestDto requestDto = new RequestDto();
-    protected final MetadataResult metadataResult = new MetadataResult();
-    protected final MetadataResults metadataResults = new MetadataResults();
-    protected final MetadataResultDto metadataResultDto = new MetadataResultDto();
-    protected final MetadataResultsDto metadataResultsDto = new MetadataResultsDto();
+    protected final IdentifiersResult identifiersResult = new IdentifiersResult();
+    protected final IdentifiersResults identifiersResults = new IdentifiersResults();
+    protected final IdentifiersResultDto identifiersResultDto = new IdentifiersResultDto();
+    protected final IdentifiersResultsDto identifiersResultsDto = new IdentifiersResultsDto();
     protected final TransportVehicle transportVehicle = new TransportVehicle();
 
     protected final SearchParameter searchParameter = new SearchParameter();
@@ -95,21 +95,22 @@ public abstract class BaseServiceTest extends AbstractServiceTest {
         this.controlEntity.setSubsetMsRequested(controlDto.getSubsetMsRequested());
         this.controlEntity.setCreatedDate(controlDto.getCreatedDate());
         this.controlEntity.setLastModifiedDate(controlDto.getLastModifiedDate());
-        this.controlEntity.setTransportMetadata(controlDto.getTransportMetaData());
+        this.controlEntity.setEftiData(controlDto.getEftiData());
+        this.controlEntity.setTransportIdentifiers(controlDto.getTransportIdentifiers());
         this.controlEntity.setFromGateUrl(controlDto.getFromGateUrl());
 
-        metadataResult.setCountryStart("FR");
-        metadataResult.setCountryEnd("FR");
-        metadataResult.setDisabled(false);
-        metadataResult.setIsDangerousGoods(true);
-        metadataResult.setTransportVehicles(List.of(transportVehicle));
-        metadataResults.setMetadataResult(Collections.singletonList(metadataResult));
+        identifiersResult.setCountryStart("FR");
+        identifiersResult.setCountryEnd("FR");
+        identifiersResult.setDisabled(false);
+        identifiersResult.setIsDangerousGoods(true);
+        identifiersResult.setTransportVehicles(List.of(transportVehicle));
+        identifiersResults.setIdentifiersResult(Collections.singletonList(identifiersResult));
 
-        metadataResultDto.setCountryStart("FR");
-        metadataResultDto.setCountryEnd("FR");
-        metadataResultDto.setDisabled(false);
-        metadataResultDto.setIsDangerousGoods(true);
-        metadataResultsDto.setMetadataResult(Collections.singletonList(metadataResultDto));
+        identifiersResultDto.setCountryStart("FR");
+        identifiersResultDto.setCountryEnd("FR");
+        identifiersResultDto.setDisabled(false);
+        identifiersResultDto.setIsDangerousGoods(true);
+        identifiersResultsDto.setIdentifiersResult(Collections.singletonList(identifiersResultDto));
     }
 
     protected <T extends RequestEntity> void setEntityRequestCommonAttributes(final T requestEntity) {
